# training-pipeline

./: pyproject.toml
data/models/: xgboost.json
scripts/: train_model.py
training_pipeline/application/: training_controller.py
training_pipeline/domain/: model_evaluator.py  model_trainer.py  training_service.py
training_pipeline/domain/entities/: consumer.py  model_evaluation.py  prediction.py
training_pipeline/domain/interfaces/: data_reader.py  model_repository.py
training_pipeline/infrastructure/data_readers/: file_data_reader.py
training_pipeline/infrastructure/model_repositories/: file_model_repository.py
