[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = "A pipeline to train an xgboost model from a csv file"
authors = ["Experian UK&I DataLab <datalabsukiandemea@experian.onmicrosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xgboost = "^2.0.3"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
pydantic = "^2.7.1"
pandera = "^0.18.3"


[[tool.poetry.source]]
name = "artifactory"
url = "https://artifacts.experian.local/artifactory/api/pypi/pypi-remote/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
